<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <!--select a role (passenger/driver)-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_role_text"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_roles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_margin="10dp"
        android:paddingEnd="50dp">

        <RadioButton
            android:id="@+id/radioButton_passenger_LoginActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_radio"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radioButton_driver_LoginActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_radio"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <!--username-->
    <EditText
        android:id="@+id/editText_userName_SignupActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_input"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:maxLines="1"/>

    <!--email-->
    <EditText
        android:id="@+id/editText_email_SignupActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <!--password-->
    <EditText
        android:id="@+id/editText_password_SignupActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <!--phone-->
    <EditText
        android:id="@+id/editText_mobile_SignupActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_input"
        android:inputType="phone"
        android:maxLines="1"/>


    <EditText
        android:id="@+id/editText_carNumber_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carNumber_input"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:maxLines="1"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editText_nrSeats_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nrSeats_input"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:maxLines="1"
        android:visibility="gone" />

    <!--sign up button-->
    <Button
        android:id="@+id/button_signup_SignupActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

</LinearLayout>