<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!--username-->
    <EditText
        android:id="@+id/editText_userName_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_input"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:maxLines="1"
        android:paddingTop="30dp" />

    <!--password-->
    <EditText
        android:id="@+id/editText_password_SignupActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <!--login button-->
    <Button
        android:id="@+id/button_login_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <!--sign up button-->
    <Button
        android:id="@+id/button_signup_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

</LinearLayout>